--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <style>
+        /* يمنع التمرير الجانبي تماماً */
+html, body {
+    overflow-x: hidden !important;
+}
+
+/* إصلاح مشكلة العناصر الطائرة خارج الشاشة */
+.decoration-circle {
+    max-width: 100%;
+    overflow: hidden;
+}
+
+/* منع الصور/العناصر من الخروج عن حد الشاشة */
+img, .project-img-wrapper, .service-card, .container, .row, section {
+    max-width: 100% !important;
+}
+
+/* تعطيل background-attachment fixed في الجوال */
+@media (max-width: 768px) {
+    .hero {
+        background-attachment: scroll !important;
+    }
+}
         :root{
             --primary: #040F16;
             --secondary: #0B2545;
