--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
         .btn-gold{ background: linear-gradient(45deg, var(--accent), var(--accent-dark)); color:#000; padding:10px 30px; border-radius:50px; font-weight:700; border:none; position:relative; overflow:hidden; }
 
         /* Hero */
-        .hero{ height: 100vh; background: linear-gradient(rgba(4,15,22,0.8), rgba(4,15,22,0.7)), url('https://images.unsplash.com/photo-1497366216548-37526070297c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80'); background-size:cover; background-position:center; background-attachment: fixed; display:flex; align-items:center; position:relative;}
+        .hero{ height: 100vh; background: linear-gradient(rgba(4,15,22,0.8), rgba(4,15,22,0.7)), url('https://images.unsplash.com/photo-1497366216548-?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80'); background-size:cover; background-position:center; background-attachment: fixed; display:flex; align-items:center; position:relative;}
         .hero-title{ font-size:4rem; line-height:1.1; margin-bottom:20px;}
         @media (max-width:768px){ .hero-title{ font-size:2.3rem; } }
 
@@ -202,7 +202,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
         <div style="display: flex; align-items: flex-start; margin-bottom: 20px;">
 
             <!-- صورة المدير بإطار ذهبي -->
-            <img src="https://images.unsplash.com/photo-1595152772835-219674b2a8a6?auto=format&fit=crop&w=500&q=60"
+            <img src="assam/IMG-20251207-WA0000.jpg"
                  style="
                     width: 130px;
                     height: 130px;
@@ -442,9 +442,9 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6" data-aos="zoom-in">
                     <div class="project-img-wrapper">
-                        <img src="https://images.unsplash.com/photo-1486325212027-8081e485255e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Project A" data-title="برج النخبة المالي" data-desc="إدارة وتنفيذ مشروع البرج التجاري والمالي مع مراقبة الجودة والالتزام بالمواعيد." data-full="https://images.unsplash.com/photo-1486325212027-8081e485255e?ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80">
+                        <img src="assam/1.jpg" alt="Project A" data-title="مدينة سكنية " data-desc="إدارة وتنفيذ مشروع المدينة السكنية مع مراقبة الجودة والالتزام بالمواعيد." data-full="">
                         <div class="project-overlay">
-                            <h4 class="text-white">برج النخبة المالي</h4>
+                            <h4 class="text-white">مدينة سكنية</h4>
                             <p class="text-warning">إدارة وتنفيذ</p>
                             <a href="#" class="btn btn-sm btn-outline-light rounded-pill project-details">التفاصيل</a>
                         </div>
@@ -453,10 +453,10 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
 
                 <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
                     <div class="project-img-wrapper">
-                        <img src="https://images.unsplash.com/photo-1531973576160-7125cd663d86?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Project B" data-title="منتجع الساحل" data-desc="تطوير عقاري متكامل يتضمن التصميم المعماري والإشراف على التنفيذ والمساحات الخدمية." data-full="https://images.unsplash.com/photo-1531973576160-7125cd663d86?ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80">
+                        <img src="assam/2.JPG" alt="Project B" data-title="مدارس تعليم " data-desc="تطوير مدارس متكامل يتضمن التصميم المعماري والإشراف على التنفيذ والمساحات الخدمية." data-full=>
                         <div class="project-overlay">
-                            <h4 class="text-white">منتجع الساحل</h4>
-                            <p class="text-warning">تطوير عقاري</p>
+                            <h4 class="text-white">مدرسة طاووس بن كيسان</h4>
+                            <p class="text-warning">للتعليم الأساسي والثانوي</p>
                             <a href="#" class="btn btn-sm btn-outline-light rounded-pill project-details">التفاصيل</a>
                         </div>
                     </div>
@@ -464,9 +464,9 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
 
                 <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
                     <div class="project-img-wrapper">
-                        <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Project C" data-title="المؤتمر الدولي للاستثمار" data-desc="تنظيم وإدارة فعاليات ومؤتمرات بمشاركة شركات ومؤسسات دولية مع خدمات لوجستية كاملة." data-full="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80">
+                        <img src="assam/3.jpg" alt="Project C" data-title="تصميم وتنفيذ" data-desc="تنظيم وإدارة فعاليات ومؤتمرات بمشاركة شركات ومؤسسات دولية مع خدمات لوجستية كاملة." data-full="">
                         <div class="project-overlay">
-                            <h4 class="text-white">المؤتمر الدولي للاستثمار</h4>
+                            <h4 class="text-white">بناء فلل</h4>
                             <p class="text-warning">تنظيم وإدارة</p>
                             <a href="#" class="btn btn-sm btn-outline-light rounded-pill project-details">التفاصيل</a>
                         </div>
