--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
 }
         :root{
             --primary: #040F16;
-            --secondary: #0B2545;
+            --secondary: #0b2545ea;
             --accent: #C5A059; /* ذهبي */
             --accent-dark: #b88a32;
             --accent-light: #ECD18C;
             --text-light: #F8F9FA;
             --glass: rgba(255,255,255,0.03);
-            --glass-border: rgba(255,255,255,0.1);
+            --glass-border: rgba(255, 255, 255, 0.1);
         }
 
         /* Base */
@@ -85,7 +85,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
 
         /* Service cards */
         .service-card{ background: var(--glass); border:1px solid var(--glass-border); padding:30px; border-radius:16px; transition:0.4s; height:100%; cursor:pointer;}
-        .service-card:hover{ background: linear-gradient(135deg, rgba(154, 191, 19, 0.03), rgba(255,255,255,0.01)); border-color:var(--accent); transform:translateY(-8px);}
+        .service-card:hover{ background: linear-gradient(135deg, rgba(255, 255, 255, 0.03), rgba(255,255,255,0.01)); border-color:var(--accent); transform:translateY(-8px);}
         .service-icon{ font-size:3.2rem; color:var(--accent); margin-bottom:20px; transition:0.4s; }
 
         /* Projects */
@@ -192,7 +192,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
         background: #bec7d3;
         padding: 25px;
         border-radius: 15px;
-        box-shadow: 0 3px 15px rgba(255, 253, 253, 0.12)
+        box-shadow: 0 3px 15px rgba(255, 255, 255, 0.12)
         font-size: 19px;
         line-height: 2;
         color: #222;
@@ -319,7 +319,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
                     <div class="service-card" role="button" tabindex="0" data-slug="legal">
                         <i class="fas fa-balance-scale service-icon"></i>
                         <h3>الاستشارات القانونية</h3>
-                        <p class="text-muted">نقدّم استشارات قانونية متخصصة لصياغة العقود، واجراءات التأسيس، والدفاع القانوني، مع الحرص على حماية مصالح العميل.</p>
+                        <p class="text-muted ">نقدّم استشارات قانونية متخصصة لصياغة العقود، واجراءات التأسيس، والدفاع القانوني، مع الحرص على حماية مصالح العميل.</p>
                         <div class="mt-3 text-end">
                             <a class="service-link small" href="#/service/legal" style="color: var(--accent);">عرض الصفحة <i class="fas fa-arrow-left"></i></a>
                         </div>
