--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
     <!-- ABOUT -->
      <!-- قسم كلمة المدير -->
 <section id="manager" class="section">
-    <h2>كلمة المدير</h2>
+    <h2>كلمة المؤسس</h2>
 
     <div style="
         background: #bec7d3;
@@ -319,7 +319,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
                     <div class="service-card" role="button" tabindex="0" data-slug="legal">
                         <i class="fas fa-balance-scale service-icon"></i>
                         <h3>الاستشارات القانونية</h3>
-                        <p class="text-muted ">نقدّم استشارات قانونية متخصصة لصياغة العقود، واجراءات التأسيس، والدفاع القانوني، مع الحرص على حماية مصالح العميل.</p>
+                        <p class="legal-text">نقدّم استشارات قانونية متخصصة لصياغة العقود، واجراءات التأسيس، والدفاع القانوني، مع الحرص على حماية مصالح العميل.</p>
                         <div class="mt-3 text-end">
                             <a class="service-link small" href="#/service/legal" style="color: var(--accent);">عرض الصفحة <i class="fas fa-arrow-left"></i></a>
                         </div>
@@ -330,7 +330,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
                     <div class="service-card" role="button" tabindex="0" data-slug="strategy">
                         <i class="fas fa-chart-line service-icon"></i>
                         <h3>التخطيط الاستراتيجي</h3>
-                        <p class="text-muted">خطط استراتيجية عملية قابلة للتنفيذ لزيادة الكفاءة وتحقيق نمو مستدام عبر دراسات سوق متقدمة وتحليل نقاط القوة.</p>
+                        <p class="legal-text">خطط استراتيجية عملية قابلة للتنفيذ لزيادة الكفاءة وتحقيق نمو مستدام عبر دراسات سوق متقدمة وتحليل نقاط القوة.</p>
                         <div class="mt-3 text-end">
                             <a class="service-link small" href="#/service/strategy" style="color: var(--accent);">عرض الصفحة <i class="fas fa-arrow-left"></i></a>
                         </div>
@@ -341,7 +341,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
                     <div class="service-card" role="button" tabindex="0" data-slug="engineering">
                         <i class="fas fa-hard-hat service-icon"></i>
                         <h3>إدارة المشاريع والهندسة</h3>
-                        <p class="text-muted">إدارة فنية وميدانية محترفة للمشروعات الكبيرة من التصميم وحتى التسليم مع معايير جودة صارمة.</p>
+                        <p class="lagel-texl">إدارة فنية وميدانية محترفة للمشروعات الكبيرة من التصميم وحتى التسليم مع معايير جودة صارمة.</p>
                         <div class="mt-3 text-end">
                             <a class="service-link small" href="#/service/engineering" style="color: var(--accent);">عرض الصفحة <i class="fas fa-arrow-left"></i></a>
                         </div>
@@ -352,7 +352,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
                     <div class="service-card" role="button" tabindex="0" data-slug="government">
                         <i class="fas fa-handshake service-icon"></i>
                         <h3>العلاقات الحكومية</h3>
-                        <p class="text-muted">خبرة طويلة في تسهيل الإجراءات الحكومية، استخراج التراخيص وبناء قنوات تواصل فعّالة مع الجهات الرسمية.</p>
+                        <p class="lagel-text">خبرة طويلة في تسهيل الإجراءات الحكومية، استخراج التراخيص وبناء قنوات تواصل فعّالة مع الجهات الرسمية.</p>
                         <div class="mt-3 text-end">
                             <a class="service-link small" href="#/service/government" style="color: var(--accent);">عرض الصفحة <i class="fas fa-arrow-left"></i></a>
                         </div>
@@ -363,7 +363,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
                     <div class="service-card" role="button" tabindex="0" data-slug="hr">
                         <i class="fas fa-users-cog service-icon"></i>
                         <h3>الموارد البشرية</h3>
-                        <p class="text-muted">حلول هيكلة وتدريب وإدارة كفاءات، مع أنظمة تقييم آلي لاختيار القيادات المناسبة لمؤسستك.</p>
+                        <p class="lagel-texl">حلول هيكلة وتدريب وإدارة كفاءات، مع أنظمة تقييم آلي لاختيار القيادات المناسبة لمؤسستك.</p>
                         <div class="mt-3 text-end">
                             <a class="service-link small" href="#/service/hr" style="color: var(--accent);">عرض الصفحة <i class="fas fa-arrow-left"></i></a>
                         </div>
@@ -374,7 +374,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
                     <div class="service-card" role="button" tabindex="0" data-slug="marketing">
                         <i class="fas fa-bullhorn service-icon"></i>
                         <h3>التسويق والعلامة التجارية</h3>
-                        <p class="text-muted">بناء هوية بصرية قوية، واستراتيجيات تسويق رقمية واحترافية لرفع وعي الجمهور وزيادة المبيعات.</p>
+                        <p class="lagel-text">بناء هوية بصرية قوية، واستراتيجيات تسويق رقمية واحترافية لرفع وعي الجمهور وزيادة المبيعات.</p>
                         <div class="mt-3 text-end">
                             <a class="service-link small" href="#/service/marketing" style="color: var(--accent);">عرض الصفحة <i class="fas fa-arrow-left"></i></a>
                         </div>
