--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade-left">
                     <div style="position: relative;">
-                        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="About" class="img-fluid rounded-3 shadow-lg" style="border: 2px solid var(--accent);">
+                        <img src="assam/rami.Jpg" alt="About" class="img-fluid rounded-3 shadow-lg" style="border: 2px solid var(--accent);">
                         <div style="position: absolute; bottom: -30px; left: -30px; background: var(--secondary); padding: 26px; border-radius: 10px; border:1px solid var(--accent);">
                             <h3 style="color: var(--accent); margin:0;">+20</h3>
                             <p style="margin:0;">سنة خبرة</p>
