--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@ img, .project-img-wrapper, .service-card, .container, .row, section {
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div style="border-radius:12px; overflow:hidden; border:1px solid var(--glass-border);">
-                            <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80" alt="${svc.title}" style="width:100%; height:100%; object-fit:cover; display:block;">
+                            <img src="assam/ht.jpg" alt="${svc.title}" style="width:100%; height:100%; object-fit:cover; display:block;">
                         </div>
                     </div>
                     <div class="col-lg-6 ps-lg-5">
